# dm3-tools

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
presets/: channel-library.yaml
scripts/: apply_presets.py  dm3-editor.sh  explore_mbdf.py  fetch_fixtures.sh  generate_presets.py  verify_layout.py
src/dm3tools/: __init__.py  cli.py  codec.py  descriptors.py  dm3f.py  mbdf.py
